style: Update map CSS to fix basic functionality | ready to ship ui on mobile

--- a/map.css
+++ b/map.css
@@ -1,8 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 #map {
     height: 100%;
@@ -15,7 +10,6 @@
 .content.mapholder {
     position: relative;
     height: 99.5vh;
-    z-index: 1;
     padding: 0;
     margin: 0;
 }
@@ -57,7 +51,7 @@
     margin-top: -1px;
     font-size: 21px;
     font-weight: bold;
-    z-index: 50 !important; 
+    z-index: 2000 !important; 
 }
 
 .menuButton {
@@ -71,7 +65,7 @@
     border-radius: 8px;
     box-shadow: 0 1px 5px rgba(0,0,0,0.65);
 	border-radius: 8px;
-    z-index: 49 !important;
+    z-index: 1999 !important;
 }
 
 .leaflet-control-attribution.leaflet-control p {
